--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,12 +13,18 @@
         android:layout_height="wrap_content"
         android:text="Play"
         tools:layout_editor_absoluteX="386dp"
-        tools:layout_editor_absoluteY="246dp" />
+        tools:layout_editor_absoluteY="246dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/highScore"
+        android:layout_marginBottom="128dp" />
 
     <TextView
         android:id="@+id/highScore"
         android:layout_width="125dp"
         android:layout_height="45dp"
         tools:layout_editor_absoluteX="462dp"
-        tools:layout_editor_absoluteY="-4dp" />
-</android.support.constraint.ConstraintLayout>
+        tools:layout_editor_absoluteY="-4dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="17dp" />
+</RelativeLayout>
